--- a/index.html
+++ b/index.html
@@ -6,32 +6,55 @@
     <title>Document</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"/>
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <header class="navbar navbar-expand-lg sticky-top">
+    <header class="navbar navbar-expand-lg sticky-top p-4">
       <div class="container">
         <button class="navbar-brand">Nome do Restaurante</button>
-        <nav>
-          <ul class="nav nav-pills">
-            <li class="nav-item">
-              <a class="nav-link active" href="">Sobre o restaurante</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Eventos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Nosso cardápio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Fale conosco</a>
-            </li>
-          </ul>
-        </nav>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <nav class="navbar-collapse collapse justify-content-end" id="menu-navegacao"> <!-- justify-content-end pois o collapse deixou os itens um do lado do outro -->
+            <ul class="nav nav-pills d-block d-md-flex"> <!-- Quando o display estiver na largura media pra frente, vai ser aplicado display flex (d-md-flex) -->
+              <li class="nav-item fw-bold">
+                <a class="nav-link active" href="">
+                  <i class="bi bi-house-door me-1"></i>
+                  Sobre o restaurante
+                </a>
+              </li>
+              <li class="nav-item fw-bold">
+                <a class="nav-link" href="">
+                  <i class="bi bi-calendar-check me-1"></i>
+                  Eventos
+                </a>
+              </li>
+              <li class="nav-item fw-bold">
+                <a class="nav-link" href=""> 
+                  <i class="bi bi-card-text me-1"></i>
+                  Nosso cardápio 
+                </a>
+              </li>
+              <li class="nav-item fw-bold">
+                <a class="nav-link" href="">
+                  <i class="bi bi-chat-left-text me-1"></i>
+                  Fale conosco
+                </a>
+              </li>
+            </ul>
+          </nav>
       </div>
     </header>
 
