--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </nav>
       </div>
     </header>
-    <div data-bs-spy="scroll" data-bs-target="cabecalho">
+    <div data-bs-spy="scroll" data-bs-target="cabecalho" data-bs-smooth-scroll="true"> <!-- Quando o usuario clicar pra ir em alguma section, vai ser direcionado com o titulo aparecendo em cima -->
       <section id="sobre-o-restaurante">
         <div class="carousel slide" data-bs-ride="carousel" id="carousel">
           <div class="carousel-inner">
@@ -129,7 +129,7 @@
                   alt="Foto do espaço interno do restaurante"
                 />
               </div>
-              <div class="col-md-7">
+              <div class="col-md-7 mt-3seção de contato">
                 <h2 class="section-title">
                   Sobre <span class="text-colored">o restaurante</span>
                 </h2>
@@ -273,10 +273,40 @@
                       <h5 class="text-colored fw-bold mt-2">Coca-Cola</h5>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
+                    <div class="col-md-3">
+                      <img class="d-block w-100" src="/images/cardapio/bebidas/coca-cola.jpg" alt="Coca-Cola">
+                      <h5 class="text-colored fw-bold mt-2">Coca-Cola</h5>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="col-md-3">
+                      <img class="d-block w-100" src="/images/cardapio/bebidas/coca-cola.jpg" alt="Coca-Cola">
+                      <h5 class="text-colored fw-bold mt-2">Coca-Cola</h5>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
                   </div>
                 </div>
                 <div class="tab-pane" id="bebidas-alcoolicas">
                   <div class="row"> 
+                    <div class="col-md-3">
+                      <img class="d-block w-100" src="/images/cardapio/bebidas/cerveja.jpg" alt="Cerveja">
+                      <h5 class="text-colored fw-bold mt-2">Cerveja</h5>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="col-md-3">
+                      <img class="d-block w-100" src="/images/cardapio/bebidas/vinho.jpg" alt="Vinho">
+                      <h5 class="text-colored fw-bold mt-2">Vinho</h5>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="col-md-3">
+                      <img class="d-block w-100" src="/images/cardapio/bebidas/cerveja.jpg" alt="Cerveja">
+                      <h5 class="text-colored fw-bold mt-2">Cerveja</h5>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="col-md-3">
+                      <img class="d-block w-100" src="/images/cardapio/bebidas/vinho.jpg" alt="Vinho">
+                      <h5 class="text-colored fw-bold mt-2">Vinho</h5>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
                     <div class="col-md-3">
                       <img class="d-block w-100" src="/images/cardapio/bebidas/cerveja.jpg" alt="Cerveja">
                       <h5 class="text-colored fw-bold mt-2">Cerveja</h5>
@@ -374,7 +404,7 @@
             </h2>
           </div>
           <div class="row">
-            <div class="col-md-7">
+            <div class="col-md-7 mb-5">
               <form>
                 <div class="mb-3">
                   <label for="nome" class="form-label fw-bold text-colored">Seu nome</label>
