--- a/index.html
+++ b/index.html
@@ -408,11 +408,11 @@
               <form>
                 <div class="mb-3">
                   <label for="nome" class="form-label fw-bold text-colored">Seu nome</label>
-                  <input type="text" id="nome" class="form-control" required>
+                  <input type="text" name="nome" id="nome" class="form-control" required>
                 </div>
                 <div class="mb-3">
                   <label for="email" class="form-label fw-bold text-colored">Seu e-mail</label>
-                  <input type="email" id="email" class="form-control" required>
+                  <input type="email" name="email" id="email" class="form-control" required>
                 </div>
                 <div class="mb-3">
                   <label for="telefone" class="form-label fw-bold text-colored">Seu telefone (opicional)</label>
@@ -420,7 +420,7 @@
                 </div>
                 <div class="mb-3">
                   <label for="mensagem" class="form-label fw-bold text-colored">Sua mensagem</label>
-                  <textarea id="mensagem" class="form-control" required></textarea>
+                  <textarea id="mensagem" name="mensagem" class="form-control" required></textarea>
                 </div>
                 <button type="submit" class="btn fw-bold">Enviar</button>
               </form>
@@ -462,5 +462,10 @@
       </section>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/jquery.mask.min.js"></script>
+    <script src="/js/jquery.validate.min.js"></script>
+    <script src="/js/messages_pt_BR.min.js"></script>
   </body>
 </html>
