--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <!-- justify-content-end pois o collapse deixou os itens um do lado do outro -->
           <ul class="nav nav-pills d-block d-md-flex">
             <!-- Quando o display estiver da largura media pra frente, vai ser aplicado display flex (d-md-flex) -->
-            <li class="nav-item fw-bold">
+            <li id="diff" class="nav-item fw-bold">
               <a class="nav-link" href="#sobre-o-restaurante">
                 <i class="bi bi-house-door me-1"></i>
                 Sobre o restaurante
